--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -31,11 +31,11 @@ http_interactions:
       X-Error-Detail:
       - Invalid email or password.
       X-Runtime:
-      - '0.225086'
+      - '0.127230'
       X-Request-Id:
-      - e0a12c11-333f-412b-819d-f8d8438b890e
+      - 38fe3c5c-7549-49eb-b120-0c29cf458dad
       Date:
-      - Sun, 07 Apr 2019 15:29:54 GMT
+      - Mon, 29 Apr 2019 16:04:38 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -44,7 +44,7 @@ http_interactions:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Sun, 07 Apr 2019 15:29:54 GMT
+  recorded_at: Mon, 29 Apr 2019 16:04:38 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -74,22 +74,22 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"473276b9204ed33a143e3dc6ba87b3bb"
+      - W/"9a31274f2cac9c88701e3ecf83a0dacc"
       X-Runtime:
-      - '0.087953'
+      - '0.026416'
       X-Request-Id:
-      - 5ed7a039-65a5-4eaf-b254-253fcf4cf301
+      - e23d3d1e-4003-4584-9de0-e0794dac8c53
       Date:
-      - Sun, 07 Apr 2019 15:29:54 GMT
+      - Mon, 29 Apr 2019 16:04:38 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
       - nginx/1.15.8 + Phusion Passenger 6.0.2
     body:
       encoding: UTF-8
-      string: '{"_id":"5caa1772a9533007beaa4a80","created_at":"2019-04-07T15:29:54Z","updated_at":"2019-04-07T15:29:54Z","name":"John","email":"john@doe.net","locale":"en","api_key":"33ce5fb2a74cc1a7cc32d3fadf64e51409d36bb7","super_admin":false,"local_admin":false}'
+      string: '{"_id":"5cc72096e051bb25df81a6b5","created_at":"2019-04-29T16:04:38Z","updated_at":"2019-04-29T16:04:38Z","name":"John","email":"john@doe.net","locale":"en","api_key":"6e8e58b1b1723318be907a3a1866cd089be6f21c","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Sun, 07 Apr 2019 15:29:54 GMT
+  recorded_at: Mon, 29 Apr 2019 16:04:38 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -119,25 +119,25 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"fc7c4c3d9d16be8d9545dce1c18b248a"
+      - W/"1dfc00cdfe7ee76fa0456e0a264413aa"
       X-Runtime:
-      - '0.008493'
+      - '0.005606'
       X-Request-Id:
-      - 52477d7a-87f3-49c1-b79d-6ada23ce6a88
+      - 4cddb2ca-2f9d-4ee0-8cba-2d534326f815
       Date:
-      - Sun, 07 Apr 2019 15:29:54 GMT
+      - Mon, 29 Apr 2019 16:04:38 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
       - nginx/1.15.8 + Phusion Passenger 6.0.2
     body:
       encoding: UTF-8
-      string: '{"token":"RzLvRkNVUyRna6okCxP9"}'
+      string: '{"token":"fRQ95GryvFK8fiW8d6Wi"}'
     http_version: 
-  recorded_at: Sun, 07 Apr 2019 15:29:54 GMT
+  recorded_at: Mon, 29 Apr 2019 16:04:38 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=RzLvRkNVUyRna6okCxP9
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=fRQ95GryvFK8fiW8d6Wi
     body:
       encoding: US-ASCII
       string: ''
@@ -149,7 +149,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - RzLvRkNVUyRna6okCxP9
+      - fRQ95GryvFK8fiW8d6Wi
   response:
     status:
       code: 200
@@ -166,13 +166,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"9f0bb3987772edd70b54bf2882c1f59a"
+      - W/"f978a8ee582cd3ba2ac17d41a1ed4e23"
       X-Runtime:
-      - '0.021974'
+      - '0.015066'
       X-Request-Id:
-      - 99083fe8-48c6-4250-b3b8-3a9f30654ea9
+      - 66f7b7d5-671c-4e65-b002-bc3a286941cc
       Date:
-      - Sun, 07 Apr 2019 15:29:54 GMT
+      - Mon, 29 Apr 2019 16:04:38 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -181,12 +181,12 @@ http_interactions:
       - gzip
     body:
       encoding: UTF-8
-      string: '{"_id":"5caa173da95330069274f68c","created_at":"2019-04-07T15:29:01Z","updated_at":"2019-04-07T15:29:01Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5cc7207ee051bb2527637768","created_at":"2019-04-29T16:04:14Z","updated_at":"2019-04-29T16:04:14Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Sun, 07 Apr 2019 15:29:54 GMT
+  recorded_at: Mon, 29 Apr 2019 16:04:38 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=RzLvRkNVUyRna6okCxP9
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=fRQ95GryvFK8fiW8d6Wi
     body:
       encoding: US-ASCII
       string: ''
@@ -198,7 +198,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - RzLvRkNVUyRna6okCxP9
+      - fRQ95GryvFK8fiW8d6Wi
   response:
     status:
       code: 200
@@ -215,13 +215,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"9f0bb3987772edd70b54bf2882c1f59a"
+      - W/"f978a8ee582cd3ba2ac17d41a1ed4e23"
       X-Runtime:
-      - '0.013451'
+      - '0.007388'
       X-Request-Id:
-      - 79920346-1e4a-4e94-bf06-77e16afc02ef
+      - f76ac137-f3d3-49fd-9958-096207cafca4
       Date:
-      - Sun, 07 Apr 2019 15:29:54 GMT
+      - Mon, 29 Apr 2019 16:04:38 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -230,7 +230,7 @@ http_interactions:
       - gzip
     body:
       encoding: UTF-8
-      string: '{"_id":"5caa173da95330069274f68c","created_at":"2019-04-07T15:29:01Z","updated_at":"2019-04-07T15:29:01Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5cc7207ee051bb2527637768","created_at":"2019-04-29T16:04:14Z","updated_at":"2019-04-29T16:04:14Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Sun, 07 Apr 2019 15:29:54 GMT
+  recorded_at: Mon, 29 Apr 2019 16:04:38 GMT
 recorded_with: VCR 4.0.0
