--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -31,11 +31,11 @@ http_interactions:
       X-Error-Detail:
       - Invalid email or password.
       X-Runtime:
-      - '0.127230'
+      - '0.159914'
       X-Request-Id:
-      - 38fe3c5c-7549-49eb-b120-0c29cf458dad
+      - 8b2273b2-7ca9-4926-b059-fc7ef4813544
       Date:
-      - Mon, 29 Apr 2019 16:04:38 GMT
+      - Tue, 14 May 2019 13:31:30 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -44,7 +44,7 @@ http_interactions:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Mon, 29 Apr 2019 16:04:38 GMT
+  recorded_at: Tue, 14 May 2019 13:31:30 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -74,22 +74,22 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"9a31274f2cac9c88701e3ecf83a0dacc"
+      - W/"adf33417f3cfdf9309522431e17215d1"
       X-Runtime:
-      - '0.026416'
+      - '0.031178'
       X-Request-Id:
-      - e23d3d1e-4003-4584-9de0-e0794dac8c53
+      - 1a8b2f47-85fb-470b-8577-50a9f848d3a0
       Date:
-      - Mon, 29 Apr 2019 16:04:38 GMT
+      - Tue, 14 May 2019 13:31:30 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
       - nginx/1.15.8 + Phusion Passenger 6.0.2
     body:
       encoding: UTF-8
-      string: '{"_id":"5cc72096e051bb25df81a6b5","created_at":"2019-04-29T16:04:38Z","updated_at":"2019-04-29T16:04:38Z","name":"John","email":"john@doe.net","locale":"en","api_key":"6e8e58b1b1723318be907a3a1866cd089be6f21c","super_admin":false,"local_admin":false}'
+      string: '{"_id":"5cdac332e051bb2af7f652ba","created_at":"2019-05-14T13:31:30Z","updated_at":"2019-05-14T13:31:30Z","name":"John","email":"john@doe.net","locale":"en","api_key":"f7433686b6e483d5621b8b0c21cd916b49f1b77d","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Mon, 29 Apr 2019 16:04:38 GMT
+  recorded_at: Tue, 14 May 2019 13:31:30 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -119,25 +119,25 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"1dfc00cdfe7ee76fa0456e0a264413aa"
+      - W/"9a1433990a71b326e867ad4375e54903"
       X-Runtime:
-      - '0.005606'
+      - '0.008614'
       X-Request-Id:
-      - 4cddb2ca-2f9d-4ee0-8cba-2d534326f815
+      - cce4d3ef-a1a8-4735-9110-4ebe0112a8c5
       Date:
-      - Mon, 29 Apr 2019 16:04:38 GMT
+      - Tue, 14 May 2019 13:31:30 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
       - nginx/1.15.8 + Phusion Passenger 6.0.2
     body:
       encoding: UTF-8
-      string: '{"token":"fRQ95GryvFK8fiW8d6Wi"}'
+      string: '{"token":"pgs-S1z9cWX72fToikoD"}'
     http_version: 
-  recorded_at: Mon, 29 Apr 2019 16:04:38 GMT
+  recorded_at: Tue, 14 May 2019 13:31:30 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=fRQ95GryvFK8fiW8d6Wi
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=pgs-S1z9cWX72fToikoD
     body:
       encoding: US-ASCII
       string: ''
@@ -149,7 +149,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - fRQ95GryvFK8fiW8d6Wi
+      - pgs-S1z9cWX72fToikoD
   response:
     status:
       code: 200
@@ -166,13 +166,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"f978a8ee582cd3ba2ac17d41a1ed4e23"
+      - W/"6b9a9e5d9d88b4afc5cdd372a78d867b"
       X-Runtime:
-      - '0.015066'
+      - '0.013583'
       X-Request-Id:
-      - 66f7b7d5-671c-4e65-b002-bc3a286941cc
+      - 6f2bbfe5-2138-4778-ae8c-22a1dc95a8fd
       Date:
-      - Mon, 29 Apr 2019 16:04:38 GMT
+      - Tue, 14 May 2019 13:31:30 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -181,12 +181,12 @@ http_interactions:
       - gzip
     body:
       encoding: UTF-8
-      string: '{"_id":"5cc7207ee051bb2527637768","created_at":"2019-04-29T16:04:14Z","updated_at":"2019-04-29T16:04:14Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5cdac2f5e051bb2a38622d70","created_at":"2019-05-14T13:30:29Z","updated_at":"2019-05-14T13:30:29Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Mon, 29 Apr 2019 16:04:38 GMT
+  recorded_at: Tue, 14 May 2019 13:31:30 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=fRQ95GryvFK8fiW8d6Wi
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=pgs-S1z9cWX72fToikoD
     body:
       encoding: US-ASCII
       string: ''
@@ -198,7 +198,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - fRQ95GryvFK8fiW8d6Wi
+      - pgs-S1z9cWX72fToikoD
   response:
     status:
       code: 200
@@ -215,13 +215,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"f978a8ee582cd3ba2ac17d41a1ed4e23"
+      - W/"6b9a9e5d9d88b4afc5cdd372a78d867b"
       X-Runtime:
-      - '0.007388'
+      - '0.015555'
       X-Request-Id:
-      - f76ac137-f3d3-49fd-9958-096207cafca4
+      - 7d8c072e-c071-4c92-a8b2-fd1fff4f00ad
       Date:
-      - Mon, 29 Apr 2019 16:04:38 GMT
+      - Tue, 14 May 2019 13:31:30 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -230,7 +230,7 @@ http_interactions:
       - gzip
     body:
       encoding: UTF-8
-      string: '{"_id":"5cc7207ee051bb2527637768","created_at":"2019-04-29T16:04:14Z","updated_at":"2019-04-29T16:04:14Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5cdac2f5e051bb2a38622d70","created_at":"2019-05-14T13:30:29Z","updated_at":"2019-05-14T13:30:29Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Mon, 29 Apr 2019 16:04:38 GMT
+  recorded_at: Tue, 14 May 2019 13:31:30 GMT
 recorded_with: VCR 4.0.0
