--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -31,11 +31,11 @@ http_interactions:
       X-Error-Detail:
       - Invalid email or password.
       X-Runtime:
-      - '0.146676'
+      - '0.152948'
       X-Request-Id:
-      - fa1540dd-cb9e-4fb8-8ac3-238361a9bacf
+      - 2c315317-aec9-4bb9-abc1-6b06b26fa75c
       Date:
-      - Tue, 14 May 2019 14:28:17 GMT
+      - Tue, 14 May 2019 20:56:05 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -44,7 +44,7 @@ http_interactions:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Tue, 14 May 2019 14:28:17 GMT
+  recorded_at: Tue, 14 May 2019 20:56:05 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -74,22 +74,22 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"19ac2c8566898153d0d66f3a7ce71a63"
+      - W/"1399f4e9cb30ef423c92e791308b88ae"
       X-Runtime:
-      - '0.032313'
+      - '0.026249'
       X-Request-Id:
-      - 6fb3c4fe-91a6-4f76-96a2-4fa49aac0df6
+      - c883643e-416c-4656-b99d-74589c6794bf
       Date:
-      - Tue, 14 May 2019 14:28:17 GMT
+      - Tue, 14 May 2019 20:56:05 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
       - nginx/1.15.8 + Phusion Passenger 6.0.2
     body:
       encoding: UTF-8
-      string: '{"_id":"5cdad081e051bb351443d80e","created_at":"2019-05-14T14:28:17Z","updated_at":"2019-05-14T14:28:17Z","name":"John","email":"john@doe.net","locale":"en","api_key":"bd69e90d4d27b6a79c50e43a7f2348b9e5c0283f","super_admin":false,"local_admin":false}'
+      string: '{"_id":"5cdb2b65a953305ff21db9f8","created_at":"2019-05-14T20:56:05Z","updated_at":"2019-05-14T20:56:05Z","name":"John","email":"john@doe.net","locale":"en","api_key":"5fa1dd55d68d284f650d9a85e9aa14828d997ee3","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Tue, 14 May 2019 14:28:17 GMT
+  recorded_at: Tue, 14 May 2019 20:56:05 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -119,25 +119,25 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"6729cdd83132feb3a8f3c8936fa2a7d4"
+      - W/"034000df31148d5185a31eda4ef6f1a0"
       X-Runtime:
-      - '0.008877'
+      - '0.005832'
       X-Request-Id:
-      - fe2cc256-abf8-41f3-a9ec-618e9042d201
+      - a155615c-053b-4705-add8-b27120ba1dab
       Date:
-      - Tue, 14 May 2019 14:28:17 GMT
+      - Tue, 14 May 2019 20:56:05 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
       - nginx/1.15.8 + Phusion Passenger 6.0.2
     body:
       encoding: UTF-8
-      string: '{"token":"CQDmJqvBK2fR8tbYE9V_"}'
+      string: '{"token":"-2u7Lfq4gb5asyfrVxyV"}'
     http_version: 
-  recorded_at: Tue, 14 May 2019 14:28:17 GMT
+  recorded_at: Tue, 14 May 2019 20:56:05 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=CQDmJqvBK2fR8tbYE9V_
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=-2u7Lfq4gb5asyfrVxyV
     body:
       encoding: US-ASCII
       string: ''
@@ -149,7 +149,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - CQDmJqvBK2fR8tbYE9V_
+      - "-2u7Lfq4gb5asyfrVxyV"
   response:
     status:
       code: 200
@@ -166,13 +166,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"9073b993176cd0ca6c8105127ab0ee2a"
+      - W/"32475793c1f341bbbf24eb2714fe96e3"
       X-Runtime:
-      - '0.018193'
+      - '0.012622'
       X-Request-Id:
-      - cd12f5f2-df70-4ab8-9e55-d174e94ba3b2
+      - c988a0e7-4512-4b7f-88a9-c8e790380253
       Date:
-      - Tue, 14 May 2019 14:28:17 GMT
+      - Tue, 14 May 2019 20:56:05 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -181,12 +181,12 @@ http_interactions:
       - gzip
     body:
       encoding: UTF-8
-      string: '{"_id":"5cdad052e051bb343622db6f","created_at":"2019-05-14T14:27:30Z","updated_at":"2019-05-14T14:27:30Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5cdb2b47a953305f3c8fc637","created_at":"2019-05-14T20:55:35Z","updated_at":"2019-05-14T20:55:35Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Tue, 14 May 2019 14:28:17 GMT
+  recorded_at: Tue, 14 May 2019 20:56:05 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=CQDmJqvBK2fR8tbYE9V_
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=-2u7Lfq4gb5asyfrVxyV
     body:
       encoding: US-ASCII
       string: ''
@@ -198,7 +198,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - CQDmJqvBK2fR8tbYE9V_
+      - "-2u7Lfq4gb5asyfrVxyV"
   response:
     status:
       code: 200
@@ -215,13 +215,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"9073b993176cd0ca6c8105127ab0ee2a"
+      - W/"32475793c1f341bbbf24eb2714fe96e3"
       X-Runtime:
-      - '0.009061'
+      - '0.008213'
       X-Request-Id:
-      - af4c8f3a-e63e-4004-83d6-d775304dd73f
+      - 84af0858-8163-4ced-9dfe-d032ece4ea05
       Date:
-      - Tue, 14 May 2019 14:28:17 GMT
+      - Tue, 14 May 2019 20:56:05 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -230,7 +230,7 @@ http_interactions:
       - gzip
     body:
       encoding: UTF-8
-      string: '{"_id":"5cdad052e051bb343622db6f","created_at":"2019-05-14T14:27:30Z","updated_at":"2019-05-14T14:27:30Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5cdb2b47a953305f3c8fc637","created_at":"2019-05-14T20:55:35Z","updated_at":"2019-05-14T20:55:35Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Tue, 14 May 2019 14:28:17 GMT
+  recorded_at: Tue, 14 May 2019 20:56:05 GMT
 recorded_with: VCR 4.0.0
