--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -31,11 +31,11 @@ http_interactions:
       X-Error-Detail:
       - Invalid email or password.
       X-Runtime:
-      - '0.152948'
+      - '0.420950'
       X-Request-Id:
-      - 2c315317-aec9-4bb9-abc1-6b06b26fa75c
+      - f4f16e85-9f6b-486f-b858-ff7cc7bb574e
       Date:
-      - Tue, 14 May 2019 20:56:05 GMT
+      - Tue, 06 Aug 2019 09:06:29 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -44,7 +44,7 @@ http_interactions:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Tue, 14 May 2019 20:56:05 GMT
+  recorded_at: Tue, 06 Aug 2019 09:06:29 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -74,22 +74,22 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"1399f4e9cb30ef423c92e791308b88ae"
+      - W/"b4b33a4fdb67fb0d6bd59699fd427211"
       X-Runtime:
-      - '0.026249'
+      - '0.043495'
       X-Request-Id:
-      - c883643e-416c-4656-b99d-74589c6794bf
+      - 2abded94-6a66-4077-a503-1d23f3aad710
       Date:
-      - Tue, 14 May 2019 20:56:05 GMT
+      - Tue, 06 Aug 2019 09:06:29 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
       - nginx/1.15.8 + Phusion Passenger 6.0.2
     body:
       encoding: UTF-8
-      string: '{"_id":"5cdb2b65a953305ff21db9f8","created_at":"2019-05-14T20:56:05Z","updated_at":"2019-05-14T20:56:05Z","name":"John","email":"john@doe.net","locale":"en","api_key":"5fa1dd55d68d284f650d9a85e9aa14828d997ee3","super_admin":false,"local_admin":false}'
+      string: '{"_id":"5d494315cb29bc146430be2d","created_at":"2019-08-06T09:06:29Z","updated_at":"2019-08-06T09:06:29Z","name":"John","email":"john@doe.net","locale":"en","api_key":"b0224b978cda95f54aed1ef27527c28e1b11494b","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Tue, 14 May 2019 20:56:05 GMT
+  recorded_at: Tue, 06 Aug 2019 09:06:29 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -119,25 +119,25 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"034000df31148d5185a31eda4ef6f1a0"
+      - W/"8bf044da205d926500d04bc7b8520436"
       X-Runtime:
-      - '0.005832'
+      - '0.010932'
       X-Request-Id:
-      - a155615c-053b-4705-add8-b27120ba1dab
+      - 96e20c50-f816-4164-85ee-79ee6b386a60
       Date:
-      - Tue, 14 May 2019 20:56:05 GMT
+      - Tue, 06 Aug 2019 09:06:29 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
       - nginx/1.15.8 + Phusion Passenger 6.0.2
     body:
       encoding: UTF-8
-      string: '{"token":"-2u7Lfq4gb5asyfrVxyV"}'
+      string: '{"token":"rBy8FpqraAgUzkLvv4QH"}'
     http_version: 
-  recorded_at: Tue, 14 May 2019 20:56:05 GMT
+  recorded_at: Tue, 06 Aug 2019 09:06:29 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=-2u7Lfq4gb5asyfrVxyV
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=rBy8FpqraAgUzkLvv4QH
     body:
       encoding: US-ASCII
       string: ''
@@ -149,7 +149,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - "-2u7Lfq4gb5asyfrVxyV"
+      - rBy8FpqraAgUzkLvv4QH
   response:
     status:
       code: 200
@@ -166,13 +166,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"32475793c1f341bbbf24eb2714fe96e3"
+      - W/"a2429ab9164a52340b24b958d799af19"
       X-Runtime:
-      - '0.012622'
+      - '0.021704'
       X-Request-Id:
-      - c988a0e7-4512-4b7f-88a9-c8e790380253
+      - 3f24969b-0368-4033-85e8-55920aeb43ca
       Date:
-      - Tue, 14 May 2019 20:56:05 GMT
+      - Tue, 06 Aug 2019 09:06:29 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -181,12 +181,12 @@ http_interactions:
       - gzip
     body:
       encoding: UTF-8
-      string: '{"_id":"5cdb2b47a953305f3c8fc637","created_at":"2019-05-14T20:55:35Z","updated_at":"2019-05-14T20:55:35Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5d4942b8cb29bc1301be57df","created_at":"2019-08-06T09:04:56Z","updated_at":"2019-08-06T09:04:56Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Tue, 14 May 2019 20:56:05 GMT
+  recorded_at: Tue, 06 Aug 2019 09:06:29 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=-2u7Lfq4gb5asyfrVxyV
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=rBy8FpqraAgUzkLvv4QH
     body:
       encoding: US-ASCII
       string: ''
@@ -198,7 +198,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - "-2u7Lfq4gb5asyfrVxyV"
+      - rBy8FpqraAgUzkLvv4QH
   response:
     status:
       code: 200
@@ -215,13 +215,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"32475793c1f341bbbf24eb2714fe96e3"
+      - W/"a2429ab9164a52340b24b958d799af19"
       X-Runtime:
-      - '0.008213'
+      - '0.011215'
       X-Request-Id:
-      - 84af0858-8163-4ced-9dfe-d032ece4ea05
+      - bd9bae6b-28c2-4a0a-8007-096e9a881b73
       Date:
-      - Tue, 14 May 2019 20:56:05 GMT
+      - Tue, 06 Aug 2019 09:06:29 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -230,7 +230,7 @@ http_interactions:
       - gzip
     body:
       encoding: UTF-8
-      string: '{"_id":"5cdb2b47a953305f3c8fc637","created_at":"2019-05-14T20:55:35Z","updated_at":"2019-05-14T20:55:35Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5d4942b8cb29bc1301be57df","created_at":"2019-08-06T09:04:56Z","updated_at":"2019-08-06T09:04:56Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Tue, 14 May 2019 20:56:05 GMT
+  recorded_at: Tue, 06 Aug 2019 09:06:29 GMT
 recorded_with: VCR 4.0.0
