--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -31,11 +31,11 @@ http_interactions:
       X-Error-Detail:
       - Invalid email or password.
       X-Runtime:
-      - '0.420950'
+      - '0.140251'
       X-Request-Id:
-      - f4f16e85-9f6b-486f-b858-ff7cc7bb574e
+      - 0e56e379-e891-41dc-88e0-e47f5e781afe
       Date:
-      - Tue, 06 Aug 2019 09:06:29 GMT
+      - Wed, 04 Sep 2019 14:33:27 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -44,7 +44,7 @@ http_interactions:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Tue, 06 Aug 2019 09:06:29 GMT
+  recorded_at: Wed, 04 Sep 2019 14:33:27 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -74,22 +74,22 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"b4b33a4fdb67fb0d6bd59699fd427211"
+      - W/"060ae6cbf8fdbfe4f7507960701c4774"
       X-Runtime:
-      - '0.043495'
+      - '0.027389'
       X-Request-Id:
-      - 2abded94-6a66-4077-a503-1d23f3aad710
+      - 8008799a-95c9-47a5-85c4-8371639b1b19
       Date:
-      - Tue, 06 Aug 2019 09:06:29 GMT
+      - Wed, 04 Sep 2019 14:33:27 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
       - nginx/1.15.8 + Phusion Passenger 6.0.2
     body:
       encoding: UTF-8
-      string: '{"_id":"5d494315cb29bc146430be2d","created_at":"2019-08-06T09:06:29Z","updated_at":"2019-08-06T09:06:29Z","name":"John","email":"john@doe.net","locale":"en","api_key":"b0224b978cda95f54aed1ef27527c28e1b11494b","super_admin":false,"local_admin":false}'
+      string: '{"_id":"5d6fcb37cb29bc4c55dc6e86","created_at":"2019-09-04T14:33:27Z","updated_at":"2019-09-04T14:33:27Z","name":"John","email":"john@doe.net","locale":"en","api_key":"9f8be8f3f4afc4727c7c3671877afb76422bb1ce","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Tue, 06 Aug 2019 09:06:29 GMT
+  recorded_at: Wed, 04 Sep 2019 14:33:27 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -119,25 +119,25 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"8bf044da205d926500d04bc7b8520436"
+      - W/"1904031187aed8c8bc72c81f33e183d1"
       X-Runtime:
-      - '0.010932'
+      - '0.004971'
       X-Request-Id:
-      - 96e20c50-f816-4164-85ee-79ee6b386a60
+      - b4b5cdd5-63f4-4394-b30d-d5a30c4965d6
       Date:
-      - Tue, 06 Aug 2019 09:06:29 GMT
+      - Wed, 04 Sep 2019 14:33:27 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
       - nginx/1.15.8 + Phusion Passenger 6.0.2
     body:
       encoding: UTF-8
-      string: '{"token":"rBy8FpqraAgUzkLvv4QH"}'
+      string: '{"token":"sHvNfno-xAby_zz4rK-6"}'
     http_version: 
-  recorded_at: Tue, 06 Aug 2019 09:06:29 GMT
+  recorded_at: Wed, 04 Sep 2019 14:33:27 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=rBy8FpqraAgUzkLvv4QH
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=sHvNfno-xAby_zz4rK-6
     body:
       encoding: US-ASCII
       string: ''
@@ -149,7 +149,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - rBy8FpqraAgUzkLvv4QH
+      - sHvNfno-xAby_zz4rK-6
   response:
     status:
       code: 200
@@ -166,13 +166,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"a2429ab9164a52340b24b958d799af19"
+      - W/"47e712d4875b0520e4e36006ecb37e42"
       X-Runtime:
-      - '0.021704'
+      - '0.013054'
       X-Request-Id:
-      - 3f24969b-0368-4033-85e8-55920aeb43ca
+      - 5d9f7213-b19d-4778-87a6-c0a0ff9936af
       Date:
-      - Tue, 06 Aug 2019 09:06:29 GMT
+      - Wed, 04 Sep 2019 14:33:27 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -181,12 +181,12 @@ http_interactions:
       - gzip
     body:
       encoding: UTF-8
-      string: '{"_id":"5d4942b8cb29bc1301be57df","created_at":"2019-08-06T09:04:56Z","updated_at":"2019-08-06T09:04:56Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5d6fcb1acb29bc4ba17a53ff","created_at":"2019-09-04T14:32:58Z","updated_at":"2019-09-04T14:32:58Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Tue, 06 Aug 2019 09:06:29 GMT
+  recorded_at: Wed, 04 Sep 2019 14:33:27 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=rBy8FpqraAgUzkLvv4QH
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=sHvNfno-xAby_zz4rK-6
     body:
       encoding: US-ASCII
       string: ''
@@ -198,7 +198,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - rBy8FpqraAgUzkLvv4QH
+      - sHvNfno-xAby_zz4rK-6
   response:
     status:
       code: 200
@@ -215,13 +215,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       ETag:
-      - W/"a2429ab9164a52340b24b958d799af19"
+      - W/"47e712d4875b0520e4e36006ecb37e42"
       X-Runtime:
-      - '0.011215'
+      - '0.005921'
       X-Request-Id:
-      - bd9bae6b-28c2-4a0a-8007-096e9a881b73
+      - b66331cd-b446-454b-a4e5-914c00cf33cd
       Date:
-      - Tue, 06 Aug 2019 09:06:29 GMT
+      - Wed, 04 Sep 2019 14:33:27 GMT
       X-Powered-By:
       - Phusion Passenger 6.0.2
       Server:
@@ -230,7 +230,7 @@ http_interactions:
       - gzip
     body:
       encoding: UTF-8
-      string: '{"_id":"5d4942b8cb29bc1301be57df","created_at":"2019-08-06T09:04:56Z","updated_at":"2019-08-06T09:04:56Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5d6fcb1acb29bc4ba17a53ff","created_at":"2019-09-04T14:32:58Z","updated_at":"2019-09-04T14:32:58Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Tue, 06 Aug 2019 09:06:29 GMT
+  recorded_at: Wed, 04 Sep 2019 14:33:27 GMT
 recorded_with: VCR 4.0.0
